--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   flutter_image_slideshow: ^0.1.6
+  url_launcher: ^6.1.14
+
 
 
 dev_dependencies:
